# voxlink

./: .gitignore  Cargo.toml  LICENSE  README.md  make_commits.ps1  more_commits.ps1  rewrite.sh  scratch_upnp.rs
.cargo/: config.toml
app/src/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs  state.rs
app/src-tauri/src/commands/: chat.rs  mod.rs  room.rs  settings.rs  voice.rs
app/src/js/: app.js
app/src/styles/: animations.css  components.css  main.css
crates/chatcall-audio/: Cargo.toml
crates/chatcall-audio/src/: capture.rs  decoder.rs  encoder.rs  jitter_buffer.rs  lib.rs  mixer.rs  pipeline.rs  playback.rs  vad.rs
crates/chatcall-core/: Cargo.toml
crates/chatcall-core/src/: events.rs  lib.rs
crates/chatcall-core/src/chat/: history.rs  message.rs  mod.rs
crates/chatcall-core/src/room/: client.rs  host.rs  mod.rs  state.rs
crates/chatcall-core/src/storage/: database.rs
crates/chatcall-core/src/user/: profile.rs
crates/chatcall-core/tests/: connection_test.rs
crates/chatcall-net/: Cargo.toml
crates/chatcall-net/src/: lib.rs  room_code.rs
crates/chatcall-net/src/crypto/: cipher.rs  keypair.rs  mod.rs  session_key.rs
crates/chatcall-net/src/discovery/: lan.rs
crates/chatcall-net/src/protocol/: codec.rs  mod.rs  packet.rs  types.rs
crates/chatcall-net/src/reliability/: ack_tracker.rs  mod.rs  ordering.rs
crates/chatcall-net/src/serialization/: binary.rs
crates/chatcall-net/src/transport/: connection.rs  mod.rs  tcp_channel.rs  udp_channel.rs
crates/chatcall-net/tests/: code_debug.rs
true/chatcall_app-19dz1gbwbr92b/s-hhlbw3wodh-1drl8c1-5ukhp069wtp614aaqo5fpse27/: metadata.rmeta
true/chatcall_app-2fu5ghte25rhf/s-hhlez92n4u-12i3upg-working/: metadata.rmeta
true/chatcall_app-320cyq239mues/s-hhpmqdxkm8-0g822vy-98q5qh3bnldflcyjkptehb4fe/: metadata.rmeta
true/chatcall_app-320cyq239mues/s-hhpoc8s99l-03liyhs-da1ywq8h88japmdi914fgdx0n/: metadata.rmeta
true/chatcall_audio-020nyuqsgmmk1/s-hhl8vl7uc9-16ymv5l-132o6z7eht6acaffilep8h9m1/: metadata.rmeta
true/chatcall_audio-0jenucj5yn7jb/s-hhplxi27wv-1dala47-cglujgw3tx5w03zl1sw47xufe/: metadata.rmeta
true/chatcall_audio-1ch13k0s38wro/s-hhlexmbgt2-0b3r6jg-dfn2hqclztjjbrr8c5gj7ld92/: metadata.rmeta
true/chatcall_audio-34g42kkpw0zao/s-hhl7kodeol-0p6o9ra-6q93cbuqf8b7kmpqh8c0ohcdn/: metadata.rmeta
true/chatcall_audio-3sdi6g5oufqz3/s-hhl7q5qz7p-1lc4miz-bmfl7ydobv5qwphj5j4eo43j9/: metadata.rmeta
true/chatcall_audio-3tf56sdmtbhlc/s-hhl7lnfkrm-1eoe5e2-a6qhtl5bayx5wcsutf7can5zn/: metadata.rmeta
true/chatcall_core-0a531ktq6o1ql/s-hhplzkkrkj-12slg3q-c30iv5kgyb6e0u0poj0yk7qht/: metadata.rmeta
true/chatcall_core-0a531ktq6o1ql/s-hhpmq9a041-0ixb5is-a3ovbb5xnwhgabpmw3l7sxi4z/: metadata.rmeta
true/chatcall_core-18ykq2bl0oel7/s-hhlez5viuh-0lqukg0-12ojvj91991a7a4ifawo70hfd/: metadata.rmeta
true/chatcall_core-1ob8w3u991t5n/s-hhl9jwcjcj-0smfto5-482hu92jaumatn9bimkslq50o/: metadata.rmeta
true/chatcall_core-3986edclpyz1n/s-hhl7qocqmx-1yq7ior-f06hvsph59wdzua621zrzo8nq/: metadata.rmeta
(+7 files in other folders)
